--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,7 +11,6 @@ p {
   font-family: Arial;
   color: #00DEF2;
   text-align: center;
-  padding-top: 20%
 }
 
 a {
@@ -23,6 +22,7 @@ h1 {
   color: white;
   font-size: 2em;
   font-weight: bold;
+  text-align: center;
 }
 
 #logo {
@@ -41,11 +41,8 @@ h1 {
 }
 
 #analyze {
-  font-size: 1em;
-  margin-top: 1%;
   max-width: 12%;
-  width: 400px;
-  height: 200px;
+  height: 100px;
   margin: 0 auto;
   background-image: url(../images/preclickButton.png);
   background-size: contain;
