fix inputBox issue

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -25,6 +25,10 @@ h1 {
 
 .inputBox {
   background-color: white;
+  margin-left: 25%;
+  margin-right: auto;
+  width: 50%;
+  height: 125px;
 }
 
 #imgBox {
